# temporal-rust-trpc-sveltekit

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  justfile  package.json  pnpm-lock.yaml
.cargo/: config.toml
app/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
app/src/: app.d.ts  hooks.server.ts
app/src/lib/: db.ts  lucia.ts  schemas.ts  types.ts
app/src/lib/trpc/: index.ts
app/src/lib/trpc/routers/: auth.ts
app/src/routes/: +page.svelte
app/src/routes/app/: +layout.server.ts  +page.svelte
app/src/routes/login/: +page.svelte
db/migrations/: 20240730192619_initial.sql
types/: Cargo.toml  typeshare.toml
types/src/: auth.rs
worker/: Cargo.toml
worker/src/: auth.rs  db.rs  errors.rs  main.rs  temporal_helpers.rs
