[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core" }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core" }
tokio = "1"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json"] }
anyhow = "1"
serde = { workspace = true }
argon2 = "0.5.3"
futures = "0.3.30"